// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manage dataset permissions route PermissionRow renders for admin permissions 1`] = `
<tr>
  <td
    className="col-xs-4"
  >
    tester@example.com
  </td>
  <td
    className="col-xs-2"
  >
    Edit dataset and edit permissions
  </td>
  <td
    className="col-xs-2"
  >
    <RemovePermissions
      datasetId="ds00001"
      userId="1234"
    />
  </td>
</tr>
`;

exports[`Manage dataset permissions route PermissionRow renders for ro permissions 1`] = `
<tr>
  <td
    className="col-xs-4"
  >
    tester@example.com
  </td>
  <td
    className="col-xs-2"
  >
    View dataset
  </td>
  <td
    className="col-xs-2"
  >
    <RemovePermissions
      datasetId="ds00001"
      userId="1234"
    />
  </td>
</tr>
`;

exports[`Manage dataset permissions route PermissionRow renders for rw permissions 1`] = `
<tr>
  <td
    className="col-xs-4"
  >
    tester@example.com
  </td>
  <td
    className="col-xs-2"
  >
    Edit dataset
  </td>
  <td
    className="col-xs-2"
  >
    <RemovePermissions
      datasetId="ds00001"
      userId="1234"
    />
  </td>
</tr>
`;

exports[`Manage dataset permissions route ShareTable renders with many permissions 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Email
      </th>
      <th>
        Access
      </th>
      <th>
        Edit
      </th>
    </tr>
  </thead>
  <tbody>
    <PermissionRow
      datasetId="ds001"
      key="0"
      userEmail="test@example.com"
      userId="1234"
    />
    <PermissionRow
      datasetId="ds001"
      key="1"
      userEmail="tester@example.com"
      userId="5678"
    />
    <PermissionRow
      datasetId="ds001"
      key="2"
      userEmail="testr@example.com"
      userId="91011"
    />
  </tbody>
</table>
`;

exports[`Manage dataset permissions route ShareTable renders with no permissions 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Email
      </th>
      <th>
        Access
      </th>
      <th>
        Edit
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`Manage dataset permissions route ShareTable renders with one permission 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Email
      </th>
      <th>
        Access
      </th>
      <th>
        Edit
      </th>
    </tr>
  </thead>
  <tbody>
    <PermissionRow
      datasetId="ds001"
      key="0"
      userEmail="test@example.com"
      userId="1234"
    />
  </tbody>
</table>
`;
